--- a/recipe-app/src/App.css
+++ b/recipe-app/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.switch{
+  background-color: blue;
+  color: green;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -22,6 +27,7 @@
 .App-link {
   color: #61dafb;
 }
+
 
 @keyframes App-logo-spin {
   from {
