--- a/recipe-app/src/App.css
+++ b/recipe-app/src/App.css
@@ -2,38 +2,36 @@
   text-align: center;
 }
 
-.switch{
-  background-color: blue;
-  color: green;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Home {
   display: flex;
+  position: absolute;
   flex-direction: column;
+  justify-items: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.Header{
+  display: flex;
+  justify-content: center;   /* adjustment */
+
+  width: 100%;
+  height: 10%;
+  background-color: red;
+  text-align: center;
+  align-items: center;
 }
 
+.Header h1{
+  position: absolute;             /* new */
+  left: 50%;
+  transform: translateX(-50%);
+  align-items: center;
+}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.themeSwitch{
+  margin-left: auto; 
+  background-color: blue;
+  padding-right: 5%;
 }
