fill out recipe info and add styling

--- a/recipe-app/src/App.css
+++ b/recipe-app/src/App.css
@@ -35,3 +35,14 @@
   background-color: blue;
   padding-right: 5%;
 }
+
+.recipe{
+  display: flex;
+  flex-direction: row;
+  background-color: green;
+}
+
+.img-title{
+  display:flex;
+  flex-direction: column;
+}
