--- a/recipe-app/src/App.css
+++ b/recipe-app/src/App.css
@@ -34,15 +34,86 @@
   margin-left: auto; 
   background-color: blue;
   padding-right: 5%;
+  
 }
 
 .recipe{
   display: flex;
   flex-direction: row;
   background-color: green;
+  width: 100vw;
+  min-height: 60vh;
+  position: relative;
 }
 
 .img-title{
+  padding-top: 1%;
   display:flex;
   flex-direction: column;
+  background-color: blue;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  justify-items: center;
+  align-items: center;
+}
+.img-title h2{
+  padding-bottom: 1%;
+}
+
+.img-title img{
+  padding-top: 1%;
+  width:  auto;
+  height: auto;
+  max-height: 30vh;
+  max-width: 30vh;
+}
+
+.img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.ingredients{
+  padding-top: 1%;
+  display: flex;
+  flex-direction: column;
+  background-color: purple;
+  width: 100%;
+ 
+  position: relative;
+}
+.ingredients p{
+  padding-top: 2%;
+  font-size: 1.2em;
+}
+
+.health{
+  padding-top: 1%;
+  display: flex;
+  flex-direction: column;
+  background-color: orange;
+  width: 100%;
+  height: 40vh;
+  position: relative;
+}
+
+@media screen and (max-width: 680px){
+  .Home label{
+    font-size: .8em;
+  }
+  .Home h1{
+    font-size: 1.2em;
+    padding-right: 15%;
+  }
+
+  .themeSwitch{
+    padding-right: 0%;
+  }
+  .recipe{
+    flex-direction: column;
+    
+    
+  }
 }
